# lca-prommis-francis

./: IDAES_LCA_Integration.ipynb  Notes.txt  README.md  pyproject.toml  requirements.txt  setup.py
resources/: foqus_node_scripts.py
src/: __init__.py  finalize_LCA_flows.py  foqus_class.py  foqus_olca_node_script.py  foqus_utils.py  generate_total_results.py  run_analysis.py
src/create_olca_process/: create_exchange_elementary_flow.py  create_exchange_pr_wa_flow.py  create_exchange_ref_flow.py  create_new_process.py
